# LSpinTransfer

./: .gitignore  .gitmodules  CMakeLists.txt  FindBinLims.C  FindBinLims_pipim.C  FindBinLims_ppimkp.C  GenericAsymmetrySimPdf_Updated.C  GetBinMigration.C  GetBinMigration2D.C  GetBinMigration2DFinalBins.C  GetBinMigration2D__Inverse.C  GetTrueSignalCount.C  GetTrueSignalCountBinned.C  GetTrueSignalFraction.C  LFeedDownPieCharts.C  LKMassFit.C  LKMassFitMC.C  LKMassFitPoly4.C  LKMassFitPoly4MC.C  LMassFit.C  LMassFitGauss.C  LMassFitGaussPoly4BGMC.C  LMassFitMC.C  LMassFitMC_DOUBLE_POLY2.C  LMassFitMC__5_13_25__z_bin.C  LMassFitPoly4.C  LMassFitPoly4MC.C  LMassFitPoly4MC__5_13_25.C  LMassFitPoly4MC__5_13_25__z_bin.C  LMassFitPoly4SimpleMC.C  LMassFitPoly4__5_14_25.C  LMassFitPoly4__5_21_25.C  LMassFit__5_23_25.C  PlotAngularDeltas.C  PlotBeforeAfterCuts.C  PlotCDCorrelations.C  PlotCDCorrelationsMC.C  PlotComparisons.C  PlotComparisons_CosPhiLambda__AcceptanceCorrected.C  PlotComparisons_SIGBG.C  (+145 more)
alib/include/: analysis3d.h  analysis_legacy.h  massfit.h
config/: GetBinMigration2D.C  GetTrueSignalCount.C  GetTrueSignalCountBinned.C  GetTrueSignalFraction.C  GetTrueSignalFraction_LOWER_SIDEBAND.C  GetTrueSignalFraction_UPPER_SIDEBAND.C  LFeedDownPieCharts.C  LMassFitMC__5_13_25__binned.py  LMassFitMC__5_13_25__full_bin.C  LMassFitMC__5_13_25__full_bin__decomposition.C  LMassFitMC__5_13_25__z_bin.C  LMassFitMC__5_13_25__z_bin.py  LMassFitMC_ppi__5_13_25__z_bin.py  LMassFit__5_23_25__FOM_LOOP__1Sigma.C  LMassFit__5_23_25__FOM_LOOP__2Sigma.C  LMassFit__5_23_25__binned.py  LMassFit__5_23_25__full_bin.C  LMassFit__5_23_25__z_bin.C  LMassFit__5_23_25__z_bin.py  LMassFit__5_23_25__z_bin_looper.py  PlotComparisons.C  PlotComparisons3MCSample.C  PlotCorrelations.C  PlotCorrelationsMC.C  PlotPPipPimComparisons.C  aggregate_kinematics_mass_ppim_momc.py  aggregate_kinematics_mass_ppim_momc_transverse.py  aggregate_kinematics_xF_ppim.py  aggregate_lower_sideband.py  aggregate_mass_fit_pdiff_momc.py  aggregate_mass_fit_pdiff_momc_transverse.py  aggregate_mc_asym_injection.py  aggregate_mc_asym_injection_cos_phi_h_ppim.py  aggregate_mc_asym_injection_cos_phi_h_ppim__max.py  aggregate_mc_asym_injection_cos_phi_h_ppim__max_transverse.py  aggregate_mc_asym_injection_cos_phi_h_ppim__min.py  aggregate_mc_asym_injection_cos_phi_h_ppim__min_transverse.py  aggregate_mc_asym_injection_cos_phi_h_ppim_transverse.py  aggregate_mc_asym_injection_hist.py  aggregate_mc_asym_injection_systematic_from_varying_injected_value.py  (+53 more)
include/: analysis.h  analysis2.h  analysis3d.h  analysis_roofit.h  massfit.h
python_scripts/: aggregate.py  aggregate_bsaanalysis_mc_asym_injection.py  aggregate_kinematics_mass_ppim.py  aggregate_mass_fit.py  aggregate_results.py  aggregate_results_lspintransferanalysis_mc_asym_injectiontest_splot__10_30_24.py  aggregate_results_summary.py  aggregate_rgh_pip_mc_asym_injection_rescaled.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rescaled__neutron_target.py  aggregate_upper_sideband.py  convert_root_to_plt.py  convert_root_to_plt_bin_migration.py  convert_root_to_plt_mass_dependence.py  convert_root_to_plt_mc_asym_injection.py  convert_root_to_plt_with_systematics.py  create_scaling.py  orchestrate_bsaanalysis.py  orchestrate_results_lkbsaanalysis_mc_asym_injectiontest_splot__11_13_24.py  plot_efficiencies.py  plot_statistical_systematic_ratio.py  plotpie.py
random_python_scripts/: aggregate_rga_pim_mc_asym_injection__4_19_24.py  aggregate_rga_pip_mc_asym_injection__4_19_24.py  aggregate_rgc_pim_mc_asym_injection__4_19_24.py  aggregate_rgc_pim_mc_asym_injection_neutron_target__4_19_24.py  aggregate_rgc_pip_mc_asym_injection__4_19_24.py  aggregate_rgc_pip_mc_asym_injection_neutron_target__4_19_24.py  aggregate_rgh_pim_mc_asym_injection__4_19_24.py  aggregate_rgh_pim_mc_asym_injection_neutron_target__4_19_24.py  aggregate_rgh_pim_mc_asym_injection_neutron_target_noSector4__4_19_24.py  aggregate_rgh_pim_mc_asym_injection_noSector4__4_19_24.py  aggregate_rgh_pim_mc_asym_injection_rescaled.py  aggregate_rgh_pim_mc_asym_injection_rescaled__neutron_target.py  aggregate_rgh_pip_mc_asym_injection__4_19_24.py  aggregate_rgh_pip_mc_asym_injection_neutron_target__4_19_24.py  aggregate_rgh_pip_mc_asym_injection_neutron_target_noSector4__4_19_24.py  aggregate_rgh_pip_mc_asym_injection_noSector4__4_19_24.py  aggregate_rgh_pip_mc_asym_injection_rescaled.py  aggregate_rgh_pip_mc_asym_injection_rescaled__neutron_target.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rescaled_22GeV.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgc_22GeV__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgc__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgc_neutron_target__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgh_22GeV__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgh__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgh_neutron_target__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgh_neutron_target_noSector4__4_19_24.py  aggregate_rgh_pippim_dihadron_mc_asym_injection_rgh_noSector4__4_19_24.py  get_kinematic_means_RGH_22GeV.py  get_kinematic_means_RGH_neutron_target.py  orchestrate_bsaanalysis_rghrga_pipmpippim__10_17_24.py  orchestrate_bsaanalysis_rghrga_pipmpippim__COUNTS__10_18_24.py
root_macros/: FindBinLims_ppimkp.C  GetBinMigration.C  GetBinMigration2D.C  GetBinMigration2DFinalBins__Inverse.C  GetTrueSignalCount.C  LMassFitGaussPoly4BG.C  LMassFitPoly4__FOM_LOOP.C  PlotComparisons.C  PlotComparisons_SIGBG.C  PlotMatchedVertexCorrelationsMC.C  PlotNegCorrelationsMC.C  PlotPosCorrelations.C  PlotSectorCorrelations.C  PlotVertexCorrelationsMC.C  getStatistics_neutron_target.C
src/: alutbsaanalysis.cpp  alutbsaanalysis2Dmc2cosphidependence.cpp  alutbsaanalysismc.cpp  analysisbincounts.cpp  analysislandaucbdiff.cpp  bsaanalysis.cpp  dihadronbsaanalysismcbincounts.cpp  massdistrmc.cpp  massfitmc.cpp  massfitmcfixparams.cpp  massfitmcgauss.cpp  test_splot.cpp  test_splot2d.cpp  test_splot_lk.cpp
(+84 files in other folders)
